Standarize wound ids

--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -232,7 +232,7 @@
     id=nfwme_fear_of_water_healing
     first_time_only=no
     [filter_second]
-        ability=fear_of_water_display
+        ability=nfw_fear_of_water_display
         [filter_location]
             terrain=W*,S*
         [/filter_location]
@@ -245,7 +245,7 @@
         variable=rand_heal_fear
         [case]
             value=1
-            {FEAR_HEALING fear_of_water_display fear_of_water}
+            {FEAR_HEALING nfw_fear_of_water_display fear_of_water}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -273,7 +273,7 @@
     id=nfwme_fear_of_hight_healing
     first_time_only=no
     [filter_second]
-        ability=fear_of_hight_display
+        ability=nfw_fear_of_hight_display
         [filter_location]
             terrain=M*,H*
         [/filter_location]
@@ -286,7 +286,7 @@
         variable=rand_heal_fear
         [case]
             value=1
-            {FEAR_HEALING fear_of_hight_display fear_of_hight}
+            {FEAR_HEALING nfw_fear_of_hight_display fear_of_hight}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -314,7 +314,7 @@
     id=nfwme_fear_of_desert_healing
     first_time_only=no
     [filter_second]
-        ability=fear_of_desert_display
+        ability=nfw_fear_of_desert_display
         [filter_location]
             terrain=A*,D*
         [/filter_location]
@@ -327,7 +327,7 @@
         variable=rand_heal_fear
         [case]
             value=1
-            {FEAR_HEALING fear_of_desert_display fear_of_desert}
+            {FEAR_HEALING nfw_fear_of_desert_display fear_of_desert}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -355,7 +355,7 @@
     id=nfwme_fear_of_cave_healing
     first_time_only=no
     [filter_second]
-        ability=fear_of_cave_display
+        ability=nfw_fear_of_cave_display
         [filter_location]
             terrain=U*
         [/filter_location]
@@ -368,7 +368,7 @@
         variable=rand_heal_fear
         [case]
             value=1
-            {FEAR_HEALING fear_of_cave_display fear_of_cave}
+            {FEAR_HEALING nfw_fear_of_cave_display fear_of_cave}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -396,7 +396,7 @@
     id=nfwme_fear_of_plant_healing
     first_time_only=no
     [filter_second]
-        ability=fear_of_plant_display
+        ability=nfw_fear_of_plant_display
         [filter_location]
             terrain=F*,T*,*^F*,*^T*
         [/filter_location]
@@ -409,7 +409,7 @@
         variable=rand_heal_fear
         [case]
             value=1
-            {FEAR_HEALING fear_of_plant_display fear_of_plant}
+            {FEAR_HEALING nfw_fear_of_plant_display fear_of_plant}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -438,7 +438,7 @@
     first_time_only=no
 
     [filter_second]
-        ability=fear_of_open_display
+        ability=nfw_fear_of_open_display
         [filter_location]
             terrain=G*,R*
             [not]
@@ -454,7 +454,7 @@
         variable=rand_heal_fear
         [case]
             value=1
-            {FEAR_HEALING fear_of_open_display fear_of_open}
+            {FEAR_HEALING nfw_fear_of_open_display fear_of_open}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -482,7 +482,7 @@
     id=nfwme_coward_healing
     first_time_only=no
     [filter_second]
-        ability=coward_display
+        ability=nfw_coward_display
         [not]
             id=$unit.id
         [/not]
@@ -510,7 +510,7 @@
                     [/variable]
                 [/or]
                 [then]
-                    {FEAR_HEALING coward_display coward}
+                    {FEAR_HEALING nfw_coward_display coward}
                     [animate_unit]
                         [filter]
                             {EVENT_SECOND_UNIT}
@@ -754,7 +754,7 @@
     id=nfwme_fear_of_fog_healing
     first_time_only=no
     [filter_second]
-        ability=fear_of_fog_display
+        ability=nfw_fear_of_fog_display
         [filter_side]
             formula="fog"
         [/filter_side]
@@ -767,7 +767,7 @@
         variable=rand_heal_fear
         [case]
             value=1
-            {FEAR_HEALING fear_of_fog_display fear_of_fog}
+            {FEAR_HEALING nfw_fear_of_fog_display fear_of_fog}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
