--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -91,7 +91,7 @@
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=broken_arm_display
+                        id=nfw_broken_arm_display
                         name="<span color='#DA0000'>"+_"broken arm"+"</span>"
                         description=_"Non-magical damage -30%"
                     [/display]
@@ -136,7 +136,7 @@
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=broken_wing_display
+                        id=nfw_broken_wing_display
                         name="<span color='#DA0000'>"+_"broken wing"+"</span>"
                         description=_"Movement points -40%"
                     [/display]
@@ -178,7 +178,7 @@
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=broken_leg_display
+                        id=nfw_broken_leg_display
                         name="<span color='#DA0000'>"+_"broken leg"+"</span>"
                         description=_"Movement points -30%"
                     [/display]
@@ -220,7 +220,7 @@
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=broken_Rib_display
+                        id=nfw_broken_rib_display
                         name="<span color='#DA0000'>"+_"broken rib"+"</span>"
                         description=_"Impact resistance -40%"
                     [/display]
@@ -236,7 +236,7 @@
             [effect]
                 apply_to=new_advancement
                 [advancement]
-                    id=NFW_broken_rib_Healing
+                    id=NFW_broken_rib_healing
                     description= _"Recover from broken rib"
                     max_times=-1
                     image="misc/staminapotion.png"
@@ -265,7 +265,7 @@
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=burned_display
+                        id=nfw_burned_display
                         name="<span color='#DA0000'>"+_"burned"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^burned"+"</span>"
                         description=_"Fire resistance -40%"
@@ -316,7 +316,7 @@
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=captured_unit_display
+                        id=nfw_captured_unit_display
                         name="<span color='#DA0000'>"+_"captured"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^captured"+"</span>"
                         description=_"Captured units have a increased recall cost untill you recall them once (recall+(10xlevel))."
@@ -343,7 +343,7 @@
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=concussion_display
+                        id=nfw_concussion_display
                         name="<span color='#DA0000'>"+_"concussed"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^concussed"+"</span>"
                         description=_"Magical damage -30%"
@@ -387,7 +387,7 @@
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=coward_display
+                        id=nfw_coward_display
                         name="<span color='#DA0000'>"+_"coward"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^coward"+"</span>"
                         description=_"Accuracy -20%
@@ -520,7 +520,7 @@ Face your fears and defeat them to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=fear_of_water_display
+                        id=nfw_fear_of_water_display
                         name="<span color='#DA0000'>"+_"aquaphobia"+"</span>"
                         description=_"Scared of water. Movement points -1 on aquatic terrains, -2 on deep waters.
 Face your fears to try to overcome them."
@@ -551,7 +551,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=fear_of_hight_display
+                        id=nfw_fear_of_hight_display
                         name="<span color='#DA0000'>"+_"acrophobia"+"</span>"
                         description=_"Scared of hights. Movement points -1 on hills terrains, -2 on mountains.
 Face your fears to try to overcome them."
@@ -580,7 +580,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=fear_of_desert_display
+                        id=nfw_fear_of_desert_display
                         name="<span color='#DA0000'>"+_"erimophobia"+"</span>"
                         description=_"Scared of deserts. Movement points -2 on frozen and sand terrains.
 Face your fears to try to overcome them."
@@ -609,7 +609,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=fear_of_cave_display
+                        id=nfw_fear_of_cave_display
                         name="<span color='#DA0000'>"+_"claustrophobia"+"</span>"
                         description=_"Scared of tight spaces. Movement points -2 on cave terrains.
 Face your fears to try to overcome them."
@@ -637,7 +637,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=fear_of_plant_display
+                        id=nfw_fear_of_plant_display
                         name="<span color='#DA0000'>"+_"dendrophobia"+"</span>"
                         description=_"Scared of plants. Movement points -2 on forest and fungus terrains.
 Face your fears to try to overcome them."
@@ -666,7 +666,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=fear_of_open_display
+                        id=nfw_fear_of_open_display
                         name="<span color='#DA0000'>"+_"agoraphobia"+"</span>"
                         description=_"Scared of open spaces. Movement points -2 on flat terrains.
 Face your fears to try to overcome them."
@@ -752,7 +752,7 @@ Face your fears to try and overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=fear_of_fog_display
+                        id=nfw_fear_of_fog_display
                         name="<span color='#DA0000'>"+_"nebulaphobia"+"</span>"
                         description=_"Scared of fog. Movement points -50% when fog is enabled.
 Face your fears to try to overcome them."
@@ -783,7 +783,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=frostbite_display
+                        id=nfw_frostbite_display
                         name="<span color='#DA0000'>"+_"frostbite"+"</span>"
                         description=_"Cold resistance -40%"
                     [/display]
@@ -828,7 +828,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=gash_display
+                        id=nfw_gash_display
                         name="<span color='#DA0000'>"+_"gash"+"</span>"
                         description=_"Blade resistance -40%"
                     [/display]
@@ -873,7 +873,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=infection_display
+                        id=nfw_infection_display
                         name="<span color='#DA0000'>"+_"infected"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^infected"+"</span>"
                         description=_"10% chance of being poisoned every turn."
@@ -912,7 +912,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=insanity_display
+                        id=nfw_insanity_display
                         name="<span color='#DA0000'>"+_"insane"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^insane"+"</span>"
                         description=_"Melee attacks gain berserk."
@@ -965,7 +965,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=maimed_display
+                        id=nfw_maimed_display
                         name="<span color='#DA0000'>"+_"maimed"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^maimed"+"</span>"
                         description=_"-30% HP"
@@ -1017,7 +1017,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=necrosis_display
+                        id=nfw_necrosis_display
                         name="<span color='#DA0000'>"+_"necrotic"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^necrotic"+"</span>"
                         description=_"Arcane resistance -40%"
@@ -1063,7 +1063,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=necrosis_display
+                        id=nfw_necrosis_display
                         name="<span color='#DA0000'>"+_"rotten"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^rotten"+"</span>"
                         description=_"Arcane and impact resistance -20%"
@@ -1110,7 +1110,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=amnesia_dummy
+                        id=nfw_amnesia_display
                         name="<span color='#DA0000'>"+_"amnesia"+"</span>"
                         description=_"Every round you lose 2 exp."
                     [/display]
@@ -1148,7 +1148,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=sick_display
+                        id=nfw_sick_display
                         name="<span color='#DA0000'>"+_"sick"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^sick"+"</span>"
                         description=_"20% chance of being slowed every turn."
@@ -1187,7 +1187,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=wild_magic_display
+                        id=nfw_wild_magic_display
                         name="<span color='#DA0000'>"+_"wild magic"+"</span>"
                         description=_"Magical attacks have a 40% chance to hit."
                     [/display]
@@ -1240,7 +1240,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=damaged_display
+                        id=nfw_damaged_display
                         name="<span color='#DA0000'>"+_"damaged"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^damaged"+"</span>"
                         description=_"Attack damage, movement, accuracy and HP -10%"
@@ -1302,7 +1302,7 @@ Face your fears to try to overcome them."
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=paper_cut_display
+                        id=nfw_paper_cut_display
                         name="<span color='#DA0000'>"+_"paper cut"+"</span>"
                         description=_"Due to the intense pain from your cut you cant concentrait on the fight.
 Damage -20% and blade resistance -50%"
@@ -1334,7 +1334,7 @@ Damage -20% and blade resistance -50%"
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=lego_display
+                        id=nfw_lego_display
                         name="<span color='#DA0000'>"+_"lego"+"</span>"
                         description=_"Due to the intense pain of stepping on LEGOs you cant walk properly.
 Movement -20% and accuracy -15%"
@@ -1363,7 +1363,7 @@ Movement -20% and accuracy -15%"
                 apply_to=new_ability
                 [abilities]
                     [display]
-                        id=dumb_display
+                        id=nfw_dumb_display
                         name="<span color='#DA0000'>"+_"dumb"+"</span>"
                         description=_"Turned so stupid from the last stone on his head, that he no longer knows when to attack.
 20% chance to lost all attacks every turn."
