killed mass_produced units with wounds

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -1020,6 +1020,40 @@
     [/foreach]
     {CLEAR_VARIABLE nfw_wounded,nfw_alive_units}
 [/event]
+
+# All wounded units are killed, because without this, there may be an excess of units. Does not include units with ghost, undead, angel, devil or elemental wounds
+[event]
+    name=prestart
+    id=nfw_loti_mass_produced
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 10_Dealing_with_Trolls}
+    [/filter_condition]
+    [kill]
+        [filter_wml]
+            [variables]
+                mass_produced=yes
+            [/variables]
+        [/filter_wml]
+        ability=nfw_coward_display,nfw_concussion_display,nfw_captured_unit_display,nfw_burned_display,nfw_broken_rib_display,nfw_broken_arm_display,nfw_broken_wing_display,nfw_broken_leg_display,nfw_burned_display,nfw_scared_of_weapon,nfw_scared_of_type,nfw_scared_of_light,nfw_scared_of_dark,nfw_frostbite_display,nfw_gash_display,nfw_fear_of_water_display,nfw_fear_of_hight_display,nfw_fear_of_cave_display,nfw_fear_of_plant_display,nfw_fear_of_open_display,nfw_fear_of_fog_display,nfw_infection_display,nfw_insanity_display,nfw_maimed_display,nfw_necrosis_display,nfw_amnesia_display,nfw_sick_display,nfw_wild_magic_display,nfw_damaged_display,nfw_paper_cut_display,nfw_lego_display,nfw_dumb_display
+        side=1
+        upkeep=loyal
+        type=Skeleton,Ghost,Walking Corpse
+        animate=no
+        fire_event=no
+    [/kill]
+[/event]
+[event]
+    name=start
+    id=nfw_loti_mass_produced_message
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 10_Dealing_with_Trolls}
+    [/filter_condition]
+    [message]
+        message="<b><i>Non-Fatal Wounds:</i></b> All level 1 wounded loyal units in the undead army have been eliminated. Turned into ghost, elemental, angel, and devil are an exception."
+        speaker=narrator
+        image="misc/nfw-icon.png"
+    [/message]
+[/event]
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
