+ fear of fog, - fear of type

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -1046,7 +1046,7 @@
     name=start
     id=nfw_loti_mass_produced_message
     [filter_condition]
-        {VARIABLE_CONDITIONAL current_scenario_id equals 10_Dealing_with_Trolls}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 11_Invasion}
     [/filter_condition]
     [message]
         message="<b><i>Non-Fatal Wounds:</i></b> All level 1 wounded loyal units in the undead army have been eliminated. Turned into ghost, elemental, angel, and devil are an exception."
